jwt verify done

--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,6 @@
 PORT = 5000
-
 MONGODB_URI = mongodb://localhost:27017/e-commerce
-
 JWT_ACTIVATION_KEY = "H12NBrBdLcEYvP8DWDBYnxCyoQFZD06uzeWFfLu8ZmI="
+SMTP_USERNAME = sujonsheikh.in@gmail.com
+SMTP_PASSWORD = oeyf nwts ndhb goll
+CLIENT_URL = http://localhost:5000
